--- a/src/components/02_molecules/header/header.module.scss
+++ b/src/components/02_molecules/header/header.module.scss
@@ -2,7 +2,25 @@
 
 .header-container {
   @include pds-grid;
-  background: linear-gradient(180deg, #1F1F1F 0%, rgba(31, 31, 31, 0.9) 0.01%, rgba(31, 31, 31, 0.9) 11.28%, rgba(31, 31, 31, 0.852589) 20.64%, rgba(32, 32, 32, 0.76) 31.34%, rgba(33, 33, 33, 0.66) 40%, rgba(34, 34, 34, 0.55) 46.67%, rgba(35, 35, 35, 0.44) 53.33%, rgba(36, 36, 36, 0.33) 60%, rgba(37, 37, 37, 0.23) 66.67%, rgba(38, 38, 38, 0.14) 73.33%, rgba(39, 39, 39, 0.08) 80%, rgba(39, 39, 39, 0.03) 86.67%, rgba(39, 39, 39, 8.6e-05) 93.33%, rgba(39, 39, 39, 0) 100%, rgba(39, 39, 39, 0) 100%);
+  background: linear-gradient(
+    180deg,
+    #1f1f1f 0%,
+    rgba(31, 31, 31, 0.9) 0.01%,
+    rgba(31, 31, 31, 0.9) 11.28%,
+    rgba(31, 31, 31, 0.852589) 20.64%,
+    rgba(32, 32, 32, 0.76) 31.34%,
+    rgba(33, 33, 33, 0.66) 40%,
+    rgba(34, 34, 34, 0.55) 46.67%,
+    rgba(35, 35, 35, 0.44) 53.33%,
+    rgba(36, 36, 36, 0.33) 60%,
+    rgba(37, 37, 37, 0.23) 66.67%,
+    rgba(38, 38, 38, 0.14) 73.33%,
+    rgba(39, 39, 39, 0.08) 80%,
+    rgba(39, 39, 39, 0.03) 86.67%,
+    rgba(39, 39, 39, 8.6e-5) 93.33%,
+    rgba(39, 39, 39, 0) 100%,
+    rgba(39, 39, 39, 0) 100%
+  );
   align-items: center;
   z-index: 99;
   min-height: 5rem;
