--- a/src/components/02_molecules/navigation/navigation.module.scss
+++ b/src/components/02_molecules/navigation/navigation.module.scss
@@ -73,9 +73,11 @@
   backdrop-filter: blur(32px);
   -webkit-backdrop-filter: blur(32px);
   opacity: 0;
+  visibility: hidden;
 
   &.active {
     transition: opacity ease-in-out 0.3s;
     opacity: 0.8;
+    visibility: visible;
   }
 }
