--- a/src/components/02_molecules/textblock/textblock.module.scss
+++ b/src/components/02_molecules/textblock/textblock.module.scss
@@ -2,11 +2,24 @@
 
 .textblock-container {
   @include pds-grid;
-  display: block;
-  grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
 
-  h2 {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+  .textblock {
+    grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
+  }
+
+  p-heading {
+    margin-top: 1.2rem;
+    margin-bottom: 1.2rem;
+  }
+
+  code {
+    /* Dark/Neutral Color/contrast-low[dark] */
+    background: #404044;
+    color: #FBFCFF;
+    /* frosted-glass */
+    backdrop-filter: blur(16px);
+    /* Note: backdrop-filter has minimal browser support */
+    border-radius: 4px;
+    padding: 2px 6px;
   }
 }
