--- a/src/components/02_molecules/textblock/textblock.module.scss
+++ b/src/components/02_molecules/textblock/textblock.module.scss
@@ -15,7 +15,7 @@
   code {
     /* Dark/Neutral Color/contrast-low[dark] */
     background: #404044;
-    color: #FBFCFF;
+    color: #fbfcff;
     /* frosted-glass */
     backdrop-filter: blur(16px);
     /* Note: backdrop-filter has minimal browser support */
