Add legal notices to footer
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,5 +1,27 @@
+@use "@porsche-design-system/components-js/styles" as *;
+
 .main {
   display: flex;
   flex-direction: column;
   flex: 1;
+}
+
+#foss-movement {
+  grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
+
+  p-heading {
+    margin-top: 1.2rem;
+    margin-bottom: 1.2rem;
+  }
+
+  code {
+    /* Dark/Neutral Color/contrast-low[dark] */
+    background: #404044;
+    color: #fbfcff;
+    /* frosted-glass */
+    backdrop-filter: blur(16px);
+    /* Note: backdrop-filter has minimal browser support */
+    border-radius: 4px;
+    padding: 2px 6px;
+  }
 }
