Add Octoicons from GitHub
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/03_organisms/projectCard/projectCard.module.scss
+++ b/src/components/03_organisms/projectCard/projectCard.module.scss
@@ -30,6 +30,24 @@
     display: flex;
     gap: $pds-spacing-static-medium;
     margin-top: $pds-spacing-static-medium;
+
+    .status {
+      display: none;
+      @include pds-media-query-min("s") {
+        display: flex;
+      }
+    }
+
+    .stars, .forks {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+
+      p-icon {
+        margin-right: $pds-spacing-static-x-small;
+      }
+    }
   }
 
   .link {
