Fix build issues
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/03_organisms/projectCard/projectCard.module.scss
+++ b/src/components/03_organisms/projectCard/projectCard.module.scss
@@ -38,7 +38,8 @@
       }
     }
 
-    .stars, .forks {
+    .stars,
+    .forks {
       display: flex;
       align-items: center;
       justify-content: center;
