Add second project to test design
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/03_organisms/projectCard/projectCard.module.scss
+++ b/src/components/03_organisms/projectCard/projectCard.module.scss
@@ -10,6 +10,7 @@
 
     img {
       border-radius: $pds-border-radius-medium $pds-border-radius-medium 0 0;
+      object-fit: contain;
     }
   }
 
