--- a/src/components/02_molecules/section/section.module.scss
+++ b/src/components/02_molecules/section/section.module.scss
@@ -1,5 +1,9 @@
 @use "@porsche-design-system/components-js/styles" as *;
 
+.section:first-of-type {
+  margin-top: $pds-spacing-fluid-x-large;
+}
+
 .section {
   margin-top: $pds-spacing-fluid-xx-large;
 }
