--- a/src/components/03_organisms/heroSection/heroSection.module.scss
+++ b/src/components/03_organisms/heroSection/heroSection.module.scss
@@ -2,19 +2,21 @@
 
 .hero-container {
   @include pds-grid;
-  margin-top: -5rem;
+  margin-top: -6rem;
   position: relative;
-  aspect-ratio: 4 / 5;
+  aspect-ratio: 2 / 3;
   align-content: end;
   grid-auto-rows: min-content;
+  grid-gap: $pds-spacing-static-small;
 
   @include pds-media-query-min("xs") {
-    aspect-ratio: 5 / 4;
+    aspect-ratio: 1 / 1;
+    margin-top: -9rem;
   }
 
   @include pds-media-query-min("s") {
     aspect-ratio: 16 / 9;
-    margin-top: -6.25rem;
+    margin-top: -12rem;
   }
 
   .background-image-container {
@@ -36,7 +38,7 @@
   .subtitle,
   .title {
     z-index: 1;
-    grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
+    grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
   }
   .subtitle {
     grid-row: 1;
