Add intro section to home page
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -6,6 +6,11 @@
   flex: 1;
 }
 
+#intro {
+  grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
+  margin-top: $pds-spacing-fluid-large;
+}
+
 #foss-movement {
   grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
 
