--- a/src/components/03_organisms/projectCard/projectCard.module.scss
+++ b/src/components/03_organisms/projectCard/projectCard.module.scss
@@ -55,6 +55,10 @@
 
   .link {
     margin-top: $pds-spacing-static-medium;
+    display: none;
+    &.active {
+      display: block;
+    }
   }
 
   .link-overlay {
