--- a/src/components/02_molecules/footer/footer.module.scss
+++ b/src/components/02_molecules/footer/footer.module.scss
@@ -93,6 +93,6 @@
   .made-with {
     grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
     text-align: center;
-    padding-top: $pds-spacing-fluid-large;
+    padding-top: $pds-spacing-fluid-medium;
   }
 }
