fix: Reduce padding of WLTP notice
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/footer/footer.module.scss
+++ b/src/components/02_molecules/footer/footer.module.scss
@@ -67,7 +67,7 @@
       grid-column: $pds-grid-full-column-start / $pds-grid-full-column-end;
 
       p {
-        padding: $pds-spacing-fluid-small 0;
+        padding: $pds-spacing-fluid-x-small 0;
       }
     }
   }
