✨ feat: Restyle FOSS movement section
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -10,3 +10,7 @@
   grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end !important;
   margin-top: $pds-spacing-fluid-large;
 }
+
+.keyvalues {
+  margin-bottom: $pds-spacing-fluid-medium;
+}
