💄: Adapt style suggestions to FOSS Movement
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/foss_movement/keyValue.module.scss
+++ b/src/components/02_molecules/foss_movement/keyValue.module.scss
@@ -8,10 +8,10 @@
   }
 
   .keyvalue {
-    grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
+    grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
     grid-row: 1;
     column-gap: $pds-spacing-fluid-medium;
-    row-gap: 0;
+    row-gap: $pds-spacing-fluid-small;
     display: grid;
     flex-direction: row;
     align-items: center;
@@ -38,7 +38,7 @@
       grid-row: 2;
 
       .principles {
-        margin-top: $pds-spacing-static-small;
+        margin-top: $pds-spacing-fluid-small;
         display: grid;
         gap: $pds-spacing-fluid-medium;
       }
