Add some spacing around nav items as proposed by @marcelbertram
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/navigation/navigation.module.scss
+++ b/src/components/02_molecules/navigation/navigation.module.scss
@@ -16,6 +16,10 @@
   line-height: 1.5rem;
 }
 
+.navLink {
+  margin-bottom: $pds-spacing-fluid-small;
+}
+
 .docsAccordion {
-  margin-top: $pds-spacing-static-medium;
+  margin: $pds-spacing-static-medium 0;
 }
