--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -47,7 +47,7 @@ ul {
     margin-bottom: $pds-spacing-static-medium;
   }
 
-  p-text-list-item {
+  p-text-list {
     margin-bottom: $pds-spacing-static-medium;
 
     p-text-list-item {
