--- a/src/components/02_molecules/codeblock/codeblock.module.scss
+++ b/src/components/02_molecules/codeblock/codeblock.module.scss
@@ -1,6 +1,7 @@
 @use "@porsche-design-system/components-js/styles" as *;
 
 .codeblock {
+  font-size: 0.8rem;
   white-space: pre-wrap;
   margin: $pds-spacing-fluid-small 0;
   padding: $pds-spacing-static-small;
