💄 style: Remove padding of links in WLTP notice
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/footer/footer.module.scss
+++ b/src/components/02_molecules/footer/footer.module.scss
@@ -58,8 +58,10 @@
   .notice {
     grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
 
-    p-link-pure {
-      padding: 0 $pds-spacing-fluid-x-small;
+    .linkBar {
+      p-link-pure {
+        padding: 0 $pds-spacing-fluid-x-small;
+      }
     }
 
     #wltp {
