--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -6,6 +6,15 @@
   flex: 1;
 }
 
+.foss-movement {
+  background: linear-gradient(
+    173.94deg,
+    #0e0e12 16.28%,
+    #171425 51.71%,
+    #0e0e12 89.43%
+  );
+}
+
 .intro {
   grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end !important;
   margin-top: $pds-spacing-fluid-large;
