🚧 WIP: Comply with PDS Grid, add memberships
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -17,9 +17,9 @@
 
 .intro {
   grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end !important;
-  margin-top: $pds-spacing-fluid-large;
+  margin-bottom: $pds-spacing-fluid-xx-large;
 }
 
 .keyvalues {
-  margin-bottom: $pds-spacing-fluid-medium;
+  margin-bottom: $pds-spacing-fluid-large;
 }
