--- a/src/components/02_molecules/section/section.module.scss
+++ b/src/components/02_molecules/section/section.module.scss
@@ -5,6 +5,17 @@
 }
 
 .section {
-  margin-top: $pds-spacing-fluid-xx-large;
   grid-column-start: $pds-grid-basic-column-start;
+}
+
+.section-grid {
+  @include pds-grid;
+
+  p-heading {
+    grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
+  }
+}
+
+.section-xl {
+  margin-top: $pds-spacing-fluid-xx-large;
 }
