🚧 WIP: Adapt Figma design
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/foss_movement/keyValue.module.scss
+++ b/src/components/02_molecules/foss_movement/keyValue.module.scss
@@ -8,18 +8,15 @@
   }
 
   &:not(:last-child) {
-    margin-bottom: $pds-spacing-fluid-large;
+    margin-bottom: $pds-spacing-fluid-x-large;
   }
 
   .keyvalue {
-    .text {
-    }
-
     .principles-accordion {
       .principles {
         margin-top: $pds-spacing-fluid-small;
         display: grid;
-        gap: $pds-spacing-fluid-medium;
+        gap: $pds-spacing-fluid-large;
       }
     }
   }
