--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -20,11 +20,26 @@
   margin-bottom: $pds-spacing-fluid-xx-large;
 }
 
+.documentation {
+  .text {
+    grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end !important;
+    margin-bottom: $pds-spacing-fluid-medium;
+    grid-row: 2;
+  }
+  .cta {
+    justify-self: center;
+    grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end !important;
+    grid-row: 3;
+  }
+}
+
 .keyvalues {
-  margin-bottom: $pds-spacing-fluid-large;
+  margin-bottom: $pds-spacing-fluid-x-large;
   grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
 }
 
-.membership-list {
+.memberships {
   margin-top: $pds-spacing-fluid-xx-large;
+  grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
+  align-items: center;
 }
