💄 style: Finalize style of heroSection
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/header/header.module.scss
+++ b/src/components/02_molecules/header/header.module.scss
@@ -2,11 +2,7 @@
 
 .header-container {
   @include pds-grid;
-  background: linear-gradient(
-    180deg,
-    var(--app-background) 0%,
-    rgba(0, 0, 0, 0) 50%
-  );
+  @include pds-gradient-to-bottom();
   align-items: center;
   z-index: 99;
   min-height: 5rem;
