💄style: Final style and content touch  (#2)
* 💄 style: Comply with PDS Grid, add memberships
* 💄 style: Extend projects carousel
* 🐛 fix: Also change height of project card overlay
* feat: adjust grid layout
* 🗑️ chore: Remove unneeded style classes
* 💄 style: Finalize style of heroSection
* 🐛 fix: Create image size 10 for blurry preload
* 🐛 fix: Add id to FOSS movement section that got lost
* 🚨 fix: Add metadataBase to remove warning
* 🔥 fix: We don't use cookies, so no fallback needed

---------

Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
Co-authored-by: Marcel Knobelsdorf <marcel.knobelsdorf@porsche.digital>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -17,9 +17,29 @@
 
 .intro {
   grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end !important;
-  margin-top: $pds-spacing-fluid-large;
+  margin-bottom: $pds-spacing-fluid-xx-large;
+}
+
+.documentation {
+  .text {
+    grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end !important;
+    margin-bottom: $pds-spacing-fluid-medium;
+    grid-row: 2;
+  }
+  .cta {
+    justify-self: center;
+    grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end !important;
+    grid-row: 3;
+  }
 }
 
 .keyvalues {
-  margin-bottom: $pds-spacing-fluid-medium;
+  margin-bottom: $pds-spacing-fluid-x-large;
+  grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
+}
+
+.memberships {
+  margin-top: $pds-spacing-fluid-xx-large;
+  grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
+  align-items: center;
 }
