--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -9,9 +9,9 @@
 .foss-movement {
   background: linear-gradient(
     173.94deg,
-    #0e0e12 16.28%,
-    #171425 51.71%,
-    #0e0e12 89.43%
+    #0e0e12 0%,
+    #69497980 50%,
+    #0e0e12 100%
   );
 }
 
