💄 style: Remove top margin from first heading
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -42,8 +42,10 @@ ul {
 }
 
 .mdx-content {
-  p-heading {
+  p-heading:not(:first-of-type) {
     margin-top: $pds-spacing-fluid-large;
+  }
+  p-heading {
     margin-bottom: $pds-spacing-fluid-small;
   }
 
