💄 style: Add margin above navigation links
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/navigation/navigation.module.scss
+++ b/src/components/02_molecules/navigation/navigation.module.scss
@@ -17,9 +17,9 @@
 }
 
 .navLink {
-  margin-bottom: $pds-spacing-fluid-small;
+  margin: $pds-spacing-fluid-small 0;
 }
 
 .docsAccordion {
-  margin: $pds-spacing-static-medium 0;
+  margin: $pds-spacing-fluid-medium 0;
 }
