--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -50,7 +50,7 @@ ul {
   }
 
   p-text-list {
-    margin-bottom: $pds-spacing-fluid-medium;
+    margin-bottom: $pds-spacing-fluid-small;
 
     p-text-list-item {
       margin-bottom: 0;
@@ -58,7 +58,7 @@ ul {
   }
 
   p {
-    margin-bottom: $pds-spacing-fluid-medium;
+    margin-bottom: $pds-spacing-fluid-small;
   }
 
   p-tag {
