💄 style: Remove margin below hero other than home
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -17,6 +17,7 @@
 
 .intro {
   grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end !important;
+  margin-top: $pds-spacing-fluid-x-large;
   margin-bottom: $pds-spacing-fluid-xx-large;
 }
 
