💄 style: Adapt gradient to hero image
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -8,10 +8,10 @@
 
 .foss-movement {
   background: linear-gradient(
-    173.94deg,
-    #0e0e12 15%,
-    #69497950 50%,
-    #0e0e12 85%
+    175deg,
+    $pds-theme-dark-background-base 10%,
+    rgb(250 127 225 / 10%) 50%,
+    $pds-theme-dark-background-base 90%
   );
 }
 
