Polishing style and content (#4)
* 📝 fix: Fix typo
* 💄 style: Restyle project cards with more contrast
* ✏️ fix: Typos/style in FOSS Movement
* Reduce height of Hero section
* Light up linear gradient on FOSS Movement.
* Replace news cover images with lighter ones.
* 💄 style: Add fluid space to MDX files
* 💄 style: Remove top margin from first heading
* 💄 style: Add margin above navigation links
* 💄 style: Reduce whitespace between paragraphs in MDX
* 💄 style: Remove margin below hero other than home
* 💄 style: Reduce font size of FOSS key values
* 💄 style: Add spacing below hero to docs page
* 💄 style: Display less project cards on smaller devices
* 📝 content: Reword FOSS Movement headline

---------

Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -8,15 +8,16 @@
 
 .foss-movement {
   background: linear-gradient(
-    173.94deg,
-    #0e0e12 16.28%,
-    #171425 51.71%,
-    #0e0e12 89.43%
+    175deg,
+    $pds-theme-dark-background-base 10%,
+    rgb(250 127 225 / 10%) 50%,
+    $pds-theme-dark-background-base 90%
   );
 }
 
 .intro {
   grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end !important;
+  margin-top: $pds-spacing-fluid-x-large;
   margin-bottom: $pds-spacing-fluid-xx-large;
 }
 
