--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -42,13 +42,15 @@ ul {
 }
 
 .mdx-content {
+  p-heading:not(:first-of-type) {
+    margin-top: $pds-spacing-fluid-large;
+  }
   p-heading {
-    margin-top: $pds-spacing-static-medium;
-    margin-bottom: $pds-spacing-static-medium;
+    margin-bottom: $pds-spacing-fluid-small;
   }
 
   p-text-list {
-    margin-bottom: $pds-spacing-static-medium;
+    margin-bottom: $pds-spacing-fluid-small;
 
     p-text-list-item {
       margin-bottom: 0;
@@ -56,7 +58,7 @@ ul {
   }
 
   p {
-    margin-bottom: $pds-spacing-static-medium;
+    margin-bottom: $pds-spacing-fluid-small;
   }
 
   p-tag {
